--- a/recyclebin/templates/layout.html
+++ b/recyclebin/templates/layout.html
@@ -111,5 +111,6 @@
 <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="/static/js/jquery.multi-select.js"></script>
 <script src="/static/js/jquery.validate.min.js"></script>
+<script src="/static/js/common.js"></script>
 {% block script %}{% endblock %}
 </html>
