--- a/recyclebin/templates/edit_profile.html
+++ b/recyclebin/templates/edit_profile.html
@@ -16,15 +16,15 @@
             </div>
 
              <div class="form-group">
-                <label for="name">Organization Name</label>
+                <label for="name">Organization Name <span class="error">*</span></label>
                 {{ form.name(class_="form-control") }}
             </div>
             <div class="form-group">
-                <label for="industry">Industry</label>
+                <label for="industry">Industry <span class="error">*</span></label>
                 {{ form.industry(class_="form-control") }}
             </div>
             <div class="form-group">
-                <label for="contactNumber1">Contact Number</label>
+                <label for="contactNumber1">Contact Number <span class="error">*</span></label>
                 {{ form.contact1(class_="form-control", placeholder="") }}
             </div>
             <div class="form-group">
@@ -32,11 +32,31 @@
                 {{ form.contact2(class_="form-control", placeholder="") }}
             </div>
             <div class="form-group">
-                <label for="address">Address</label>
+                <label for="address">Address <span class="error">*</span></label>
                 {{ form.address(class_="form-control", placeholder="Address") }}
             </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label for="state">State <span class="error">*</span></label>
+                        {{ form.state(class_="form-control", placeholder="State") }}
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label for="district">District</label>
+                        {{ form.district(class_="form-control", placeholder="District") }}
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label for="district">Place</label>
+                        {{ form.place(class_="form-control", placeholder="Place") }}
+                    </div>
+                </div>
+            </div>
             <div class="form-group">
-                <label for="contactPerson">Contact Person</label>
+                <label for="contactPerson">Contact Person <span class="error">*</span></label>
                 {{ form.contact_person(class_="form-control") }}
             </div>
 
@@ -78,6 +98,7 @@
                 industry: "required",
                 contact1: "required",
                 address: "required",
+                state: "required",
                 contact_person: "required"
             },
             // Specify validation error messages
@@ -86,6 +107,7 @@
                 industry: "Please choose the type of Industry",
                 contact1: "Please enter atleast 1 contact phone number",
                 address: "Please enter the address",
+                state: "Please select the state",
                 email: "Please enter a valid email address"
             },
             // Make sure the form is submitted to the destination defined
