disclaimer text added

--- a/recyclebin/templates/layout.html
+++ b/recyclebin/templates/layout.html
@@ -98,7 +98,8 @@
 <!-- Footer -->
 <footer class="py-3 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Recycle 2018</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Recycle 2018 | <a class="m-0 text-center text-white" href="{{ url_for('index.disclaimer') }}">Disclaimer</a></p>
+
     </div>
     <!-- /.container -->
 </footer>
